# Software-Engineering-68

./: .gitignore  3.10.0  README.md  cmds.txt  convert_to_utf8.py  cutcamp  data.json  data.yml  data_fixed.json  data_fixed.yml  package.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: admin.py  forms.py  forms_admin.py  models.py  views.py  views_admin.py
accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_nickname_user_phone_user_photo.py
bookings/: forms.py  forms_admin.py  forms_public.py  models.py  views_admin.py  views_public.py
bookings/migrations/: 0001_initial.py  0002_bookingaddon.py  0003_alter_booking_service_alter_bookingaddon_service.py
config/: settings.py  urls.py
hairai/: apps.py  deepface_utils.py  eden_client.py  forms.py  gemini.py  gemini_client.py  views.py
reviews/: forms.py  models.py  views_public.py
reviews/migrations/: 0001_initial.py
services/: admin.py  forms.py  models.py  views.py  views_admin.py
services/migrations/: 0001_initial.py  0002_service_image.py
templates/: base.html  home.html
templates/accounts/: edit_profile.html  login.html  register.html
templates/adminx/: barber_confirm_delete.html  barber_form.html  barber_list.html  booking_addon_form.html  booking_form.html  booking_list.html  dashboard.html  service_delete_confirm.html  service_form.html  service_list.html
templates/bookings/: booking_edit.html  my_bookings.html  online_success.html  step1_service.html  step2_barber.html  step3_datetime.html
templates/hairai/: hair_ai.html
(+4 files in other folders)
