[project]
name = "anupolkl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.0",
    "django>=5.2.8",
    "django-tailwind>=4.4.1",
    "pillow>=12.0.0",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
    "whitenoise>=6.11.0",
]
